--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-uuid": "^2.0.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
