Added actions to perform actions with forms

--- a/src/data/tasks.json
+++ b/src/data/tasks.json
@@ -2,7 +2,7 @@
   "tasks": [
     {
       "id": "1111",
-      "tittle": "Bañar al Perro",
+      "tittle": "Bañar al Perro que pasa cuando el titulo es algo grande y se pasa de la barra pero quiero que se pinte todo ok",
       "doDate": "2021-10-08T12:48:41Z",
       "note": "Contacto Puppy Wash 999-555-36",
       "tags": ["casa", "mascota"],
