--- a/src/data/tasks.json
+++ b/src/data/tasks.json
@@ -3,53 +3,53 @@
     {
       "id": "1111",
       "tittle": "Bañar al Perro que pasa cuando el titulo es algo grande y se pasa de la barra pero quiero que se pinte todo ok",
-      "doDate": "2021-10-08T12:48:41Z",
+      "doDate": "2021-10-08",
       "note": "Contacto Puppy Wash 999-555-36",
       "tags": ["casa", "mascota"],
       "daysToWarn": 5,
       "actions": [
         {
           "message": "Sure, I'll see you later.",
-          "done": "2021-10-08T12:48:41Z"
+          "done": "2021-10-08"
         },
         {
           "message": "Yeah, sure. Does 1:00pm work?",
-          "done": "2021-05-12T16:48:41Z"
+          "done": "2021-05-12"
         },
         {
           "message": "Did you still want to grab lunch today?",
-          "done": "2021-02-21T10:48:41Z"
+          "done": "2021-02-21"
         },
         {
           "message": "Sure, I'll see you later.",
-          "done": "2021-10-08T12:48:41Z"
+          "done": "2021-10-08"
         },
         {
           "message": "Yeah, sure. Does 1:00pm work?",
-          "done": "2021-05-12T16:48:41Z"
+          "done": "2021-05-12"
         },
         {
           "message": "Did you still want to grab lunch today?",
-          "done": "2021-02-21T10:48:41Z"
+          "done": "2021-02-21"
         },
         {
           "message": "Sure, I'll see you later.",
-          "done": "2021-10-08T12:48:41Z"
+          "done": "2021-10-08"
         },
         {
           "message": "Yeah, sure. Does 1:00pm work?",
-          "done": "2021-05-12T16:48:41Z"
+          "done": "2021-05-12"
         },
         {
           "message": "Did you still want to grab lunch today?",
-          "done": "2021-02-21T10:48:41Z"
+          "done": "2021-02-21"
         }
       ]
     },
     {
       "id": "22222",
       "tittle": "Lavar el auto",
-      "doDate": "2021-10-13T12:48:41Z",
+      "doDate": "2021-10-13",
       "note": "Contacto Puppy Wash 999-555-36",
       "tags": ["casa", "cars"],
       "daysToWarn": 5
@@ -57,36 +57,36 @@
     {
       "id": "33333",
       "tittle": "Poner Gas",
-      "doDate": "2022-10-08T12:48:41Z",
+      "doDate": "2022-10-08",
       "note": "Contacto Puppy Wash 999-555-36",
       "tags": ["casa", "mantenimiento"],
       "daysToWarn": 5,
       "actions": [
         {
           "message": "Sure, I'll see you later.",
-          "done": "2021-10-08T12:48:41Z"
+          "done": "2021-10-08"
         },
         {
           "message": "Yeah, sure. Does 1:00pm work?",
-          "done": "2021-05-12T16:48:41Z"
+          "done": "2021-05-12"
         }
       ]
     },
     {
       "id": "44444",
       "tittle": "Impermeavilizar",
-      "doDate": "2022-07-15T12:00:41Z",
+      "doDate": "2022-07-15",
       "note": "Contacto Puppy Wash 999-555-36",
       "tags": ["casa", "mantenimiento", "cars"],
       "daysToWarn": 5,
       "actions": [
         {
           "message": "Sure, I'll see you later.",
-          "done": "2021-10-08T12:48:41Z"
+          "done": "2021-10-08"
         },
         {
           "message": "Yeah, sure. Does 1:00pm work?",
-          "done": "2021-05-12T16:48:41Z"
+          "done": "2021-05-12"
         }
       ]
     }
